ajuste markdown, libs, swagger, main e docs
